--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
